<resources>
    <string name="app_name">travel_cost</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price_for_litre">Preço por litro</string>
    <string name="kms_for_litre">KMs por litro</string>
    <string name="total_cost">SEU GASTO TOTAL SERÁ DE: </string>
    <string name="calculate">CALCULAR</string>
    <string name="fill_every_inputs">Preencha todos os campos!</string>
    <string name="error_value">O valor da autonomia deve ser maior que 0!</string>
    <string name="r_0">R$ 0</string>
</resources>