<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorLayout"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputDistancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/distancy"
        android:inputType="number"
        android:theme="@style/inputStyle" />

    <TextView
        android:id="@+id/comment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputDistancy"
        android:layout_marginBottom="10dp"
        android:text="@string/total_km"
        android:theme="@style/commentsStyles" />

    <EditText
        android:id="@+id/inputPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment1"
        android:layout_marginBottom="8dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:theme="@style/inputStyle" />

    <TextView
        android:id="@+id/comment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPrice"
        android:layout_marginBottom="10dp"
        android:text="@string/price_for_litre"
        android:theme="@style/commentsStyles" />

    <EditText
        android:id="@+id/inputAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment2"
        android:layout_marginBottom="8dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:theme="@style/inputStyle" />

    <TextView
        android:id="@+id/comment3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputAutonomy"
        android:layout_marginBottom="10dp"
        android:text="@string/kms_for_litre"
        android:theme="@style/commentsStyles" />

    <TextView
        android:id="@+id/titleTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment3"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/total_cost"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTotal"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="R$ 0"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalCost"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/calculate"
        android:theme="@style/buttonStyle" />

</RelativeLayout>